The dialog box on mobile Safari and Chrome now does not jump randomly. Improve the accessibility by allowing users to zoom in and out of the page. Remove the resize event in the dialog to prevent random jumping when a user zooms in or out. The default behavior of the dialog box is changed, and now it does not allow the page to scroll. If a parent is specified for the dialog box, the page is allowed to scroll. Bump version number.

--- a/css/frame.css
+++ b/css/frame.css
@@ -1,6 +1,6 @@
 /*************************************************************************
  * GitHub: https://github.com/yenchiah/project-website-template
- * Version: v3.8
+ * Version: v3.9
  * This CSS file is for the website frame
  * If you want to keep this template updated, avoid modifying this file
  * Instead, add your own CSS in the index.css
@@ -12,6 +12,9 @@ body {
   padding: 0;
   background-color: white;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  left: 0;
+  right: 0;
+  width: auto;
 }
 
 a {
